--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+CONFIG_SHELL=/bin/bash /bin/bash ./configure --prefix=/usr --libdir=/usr/lib/x86_64-linux-gnu --enable-dependency-tracking --disable-silent-rules
+
 Introduction
 ============
 
